--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <div id="map"></div>
 
 <script>
-  mapboxgl.accessToken = 'YOUR_MAPBOX_ACCESS_TOKEN'; // 여기에 본인의 Mapbox 토큰 입력
+  mapboxgl.accessToken = 'pk.eyJ1IjoidGFrZWJ1Y2hpaGFydSIsImEiOiJjbThyOWk5bnowamx1MmtzY3NqM3h4NGg1In0.z8tX24NQPHkZY_GwSLsc9Q'; // 여기에 본인의 Mapbox 토큰 입력
 
   const map = new mapboxgl.Map({
     container: 'map',
