--- a/index.html
+++ b/index.html
@@ -3,20 +3,20 @@
 <html>
 <head>
   <meta charset="utf-8" />
-  <title>Mapbox GL JS 오버레이 예제</title>
+  <title>Mapbox - 사용자 위치 + 커스텀 마커</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <script src="https://api.mapbox.com/mapbox-gl-js/v2.15.0/mapbox-gl.js"></script>
   <link href="https://api.mapbox.com/mapbox-gl-js/v2.15.0/mapbox-gl.css" rel="stylesheet" />
   <style>
-    body, html {
-      margin: 0;
-      padding: 0;
-      height: 100%;
-    }
-    #map {
-      position: absolute;
-      top: 0; bottom: 0;
-      width: 100%;
+    body, html { margin: 0; padding: 0; height: 100%; }
+    #map { width: 100%; height: 100%; }
+
+    .custom-marker {
+      width: 60px;
+      height: 60px;
+      background-size: cover;
+      border-radius: 50%;
+      border: 2px solid white;
     }
   </style>
 </head>
@@ -24,45 +24,59 @@
 <div id="map"></div>
 
 <script>
-  mapboxgl.accessToken = 'pk.eyJ1IjoidGFrZWJ1Y2hpaGFydSIsImEiOiJjbThyOWk5bnowamx1MmtzY3NqM3h4NGg1In0.z8tX24NQPHkZY_GwSLsc9Q'; // 여기에 본인의 Mapbox 토큰 입력
+  mapboxgl.accessToken = 'pk.eyJ1IjoidGFrZWJ1Y2hpaGFydSIsImEiOiJjbThyOWk5bnowamx1MmtzY3NqM3h4NGg1In0.z8tX24NQPHkZY_GwSLsc9Q';
 
   const map = new mapboxgl.Map({
     container: 'map',
     style: 'mapbox://styles/mapbox/light-v11',
     center: [126.825, 37.566],
-    zoom: 15,
+    zoom: 16,
     pitch: 45,
-    bearing: -17.6,
+    bearing: -10,
     antialias: true
   });
 
-  map.on('load', () => {
-    map.addSource('overlay', {
-      type: 'image',
-      url: 'botanicpark_map.jpeg',
-      coordinates: [
-        [126.8155, 37.5730],
-        [126.8345, 37.5730],
-        [126.8345, 37.5585],
-        [126.8155, 37.5585]
-      ]
-    });
+  // 사용자 위치 마커 커스텀
+  function addUserMarker(lng, lat) {
+    const el = document.createElement('div');
+    el.className = 'custom-marker';
+    el.style.backgroundImage = 'url(dung1.png)';
 
-    map.addLayer({
-      id: 'overlay-layer',
-      source: 'overlay',
-      type: 'raster',
-      paint: {
-        'raster-opacity': 0.9
-      }
-    });
+    new mapboxgl.Marker(el)
+      .setLngLat([lng, lat])
+      .addTo(map);
+  }
 
-    const geolocate = new mapboxgl.GeolocateControl({
-      positionOptions: { enableHighAccuracy: true },
-      trackUserLocation: true,
-      showUserHeading: true
-    });
-    map.addControl(geolocate);
+  // 현재 위치 추적
+  navigator.geolocation.getCurrentPosition((position) => {
+    const { latitude, longitude } = position.coords;
+    map.setCenter([longitude, latitude]);
+    addUserMarker(longitude, latitude);
+  });
+
+  // 커스텀 마커 데이터
+  const markers = [
+    { lng: 126.83621, lat: 37.57017, img: 'st1.png', title: '해봄정원', url: 'botanicpark.seoul.go.kr/front/main.do' },
+    { lng: 126.83499, lat: 37.83499, img: 'on1.png', title: '식물문화센터', url: '' },
+    { lng: 126.83443, lat: 37.57068, img: 'gold1.png', title: '거인의 정원', url: '' },
+    { lng: 126.83589, lat: 37.56965, img: 'ct1.png', title: '판매온실', url: '' }
+  ];
+
+  markers.forEach(m => {
+    const el = document.createElement('div');
+    el.className = 'custom-marker';
+    el.style.backgroundImage = `url(${m.img})`;
+
+    const marker = new mapboxgl.Marker(el)
+      .setLngLat([m.lng, m.lat])
+      .setPopup(new mapboxgl.Popup().setText(m.title))
+      .addTo(map);
+
+    if (m.url) {
+      el.addEventListener('click', () => {
+        window.open(m.url, '_blank');
+      });
+    }
   });
 </script>
 </body>
