--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
       type: 'image',
       url: 'botanicpark_map.jpeg',
       coordinates: [
-        [126.83117, 37.57416],
-        [126.84083, 37.57416],
-        [126.84083, 37.56578],
-        [126.83117, 37.56578]
+      [126.8345, 37.5675], // top-left
+      [126.8425, 37.5675], // top-right
+      [126.8425, 37.5615], // bottom-right
+      [126.8345, 37.5615]  // bottom-left
       ]
     });
 
