--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
       type: 'image',
       url: 'botanicpark_map.jpeg',
       coordinates: [
-      [126.83117, 37.57416], // top-left
-      [126.84083, 37.57416], // top-right
-      [126.84083, 37.56578], // bottom-right
-      [126.83117, 37.56578]  // bottom-left
+      [126.8325, 37.5713], // 좌상단 (lng, lat)
+      [126.8370, 37.5713], // 우상단
+      [126.8370, 37.5673], // 우하단
+      [126.8325, 37.5673]  // 좌하단
       ]
     });
 
