--- a/index.html
+++ b/index.html
@@ -56,10 +56,10 @@
       type: 'image',
       url: 'botanicpark_map.jpeg',
       coordinates: [
-        [126.83163, 37.57312],
-        [126.83955, 37.56684],
-        [126.83163, 37.56684],
-        [126.8955, 37.57312]
+      [126.83163, 37.57312], // top-left
+      [126.8955, 37.57312],  // top-right
+      [126.83955, 37.56684], // bottom-right
+      [126.83163, 37.56684]  // bottom-left
       ]
     });
     map.addLayer({
