--- a/index.html
+++ b/index.html
@@ -56,12 +56,13 @@
       type: 'image',
       url: 'botanicpark_map.jpeg',
       coordinates: [
-      [126.83163, 37.57312],
-      [126.83955, 37.57312],
-      [126.83955, 37.56684],
-      [126.83163, 37.56684],
-      [126.83163, 37.57312]
-      ]
+      coordinates: [
+      [126.83163, 37.57394],  // 좌측 상단
+      [126.83955, 37.57394],  // 우측 상단
+      [126.83955, 37.56602],  // 우측 하단
+      [126.83163, 37.56602],  // 좌측 하단
+      [126.83163, 37.57394]   // (닫기)
+    ]
     });
     map.addLayer({
       id: 'overlay-layer',
