--- a/index.html
+++ b/index.html
@@ -3,19 +3,43 @@
 <html>
 <head>
   <meta charset="utf-8" />
-  <title>Mapbox 오버레이 수정됨</title>
+  <title>Mapbox 전체 지도 기능</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <script src="https://cdn.jsdelivr.net/npm/@turf/turf@6/turf.min.js"></script>
   <script src="https://api.mapbox.com/mapbox-gl-js/v2.15.0/mapbox-gl.js"></script>
   <link href="https://api.mapbox.com/mapbox-gl-js/v2.15.0/mapbox-gl.css" rel="stylesheet" />
   <style>
     body, html { margin: 0; padding: 0; height: 100%; }
     #map { width: 100%; height: 100%; }
+    .custom-marker {
+      width: 60px;
+      height: 60px;
+      background-size: cover;
+      border-radius: 50%;
+      border: 2px solid white;
+    }
+    .popup-content {
+      font-size: 1em;
+      padding: 4px;
+      max-width: 200px;
+      line-height: 1.3em;
+    }
+    .popup-content a {
+      display: inline-block;
+      margin-top: 6px;
+      color: #007AFF;
+      text-decoration: none;
+      font-weight: bold;
+    }
+    .popup-content a:hover {
+      text-decoration: underline;
+    }
   </style>
 </head>
 <body>
 <div id="map"></div>
 <script>
-  mapboxgl.accessToken = 'YOUR_MAPBOX_ACCESS_TOKEN';
+  mapboxgl.accessToken = 'pk.eyJ1IjoidGFrZWJ1Y2hpaGFydSIsImEiOiJjbThyOWk5bnowamx1MmtzY3NqM3h4NGg1In0.z8tX24NQPHkZY_GwSLsc9Q';
 
   const map = new mapboxgl.Map({
     container: 'map',
@@ -29,10 +53,10 @@
       type: 'image',
       url: 'botanicpark_map.jpeg',
       coordinates: [
-        [126.83163, 37.57312],  // top-left
-        [126.83955, 37.57312],  // top-right
-        [126.83955, 37.56684],  // bottom-right
-        [126.83163, 37.56684]   // bottom-left
+        [126.83163, 37.57312],
+        [126.83955, 37.57312],
+        [126.83955, 37.56684],
+        [126.83163, 37.56684]
       ]
     });
 
@@ -42,6 +66,74 @@
       source: 'overlay',
       paint: { 'raster-opacity': 0.9 }
     });
+  });
+
+  const markers = [
+    { lng: 126.83621, lat: 37.57017, img: 'st1.png', title: '해봄정원', url: 'https://botanicpark.seoul.go.kr/front/main.do' },
+    { lng: 126.83499, lat: 37.57002, img: 'on1.png', title: '식물문화센터', url: '' },
+    { lng: 126.83443, lat: 37.57068, img: 'gold1.png', title: '거인의 정원', url: '' },
+    { lng: 126.83589, lat: 37.56965, img: 'ct1.png', title: '판매온실', url: '' }
+  ];
+
+  let currentPopup = null;
+  let userMarker = null;
+
+  function showPopupIfNearby(userLng, userLat) {
+    markers.forEach(m => {
+      const distance = turf.distance([userLng, userLat], [m.lng, m.lat], { units: 'meters' });
+      if (distance < 20) {
+        if (!currentPopup || currentPopup._lngLat.lng !== m.lng) {
+          if (currentPopup) currentPopup.remove();
+          const popupHTML = `
+            <div class="popup-content">
+              ${m.title}
+              ${m.url ? `<br><a href="${m.url}" target="_blank">자세히 보기</a>` : ''}
+            </div>
+          `;
+          currentPopup = new mapboxgl.Popup()
+            .setLngLat([m.lng, m.lat])
+            .setHTML(popupHTML)
+            .addTo(map);
+        }
+      }
+    });
+  }
+
+  navigator.geolocation.watchPosition((position) => {
+    const { latitude, longitude } = position.coords;
+    map.setCenter([longitude, latitude]);
+    if (userMarker) userMarker.remove();
+    const el = document.createElement('div');
+    el.className = 'custom-marker';
+    el.style.backgroundImage = 'url(dung1.png)';
+    userMarker = new mapboxgl.Marker(el).setLngLat([longitude, latitude]).addTo(map);
+    showPopupIfNearby(longitude, latitude);
+  }, err => {
+    alert("위치 정보를 가져올 수 없습니다.");
+  }, {
+    enableHighAccuracy: true,
+    maximumAge: 0,
+    timeout: 5000
+  });
+
+  markers.forEach(m => {
+    const el = document.createElement('div');
+    el.className = 'custom-marker';
+    el.style.backgroundImage = `url(${m.img})`;
+
+    const popupHTML = `
+      <div class="popup-content">
+        ${m.title}
+        ${m.url ? `<br><a href="${m.url}" target="_blank">자세히 보기</a>` : ''}
+      </div>
+    `;
+
+    const popup = new mapboxgl.Popup().setLngLat([m.lng, m.lat]).setHTML(popupHTML);
+
+    new mapboxgl.Marker(el)
+      .setLngLat([m.lng, m.lat])
+      .setPopup(popup)
+      .addTo(map);
   });
 </script>
 </body>
