--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     body, html { margin: 0; padding: 0; height: 100%; }
     #map { width: 100%; height: 100%; }
     .custom-marker {
-      width: 90px;
-      height: 90px;
+      width: 100px;
+      height: 100px;
       background-size: cover;
       border-radius: 50%;
       border: 2px solid white;
@@ -266,6 +266,8 @@
     const el = document.createElement('div');
     el.className = 'custom-marker';
     el.style.backgroundImage = `url(${m.img})`;
+    el.style.width = '80px';
+    el.style.height = '80px';
 
     const popupHTML = `
       <div class="popup-content">
