--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
 <head>
   <meta charset="utf-8" />
-  <title>Mapbox 전체 지도 기능</title>
+  <title>botanicpark_seoul-haebom_festival</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <script src="https://cdn.jsdelivr.net/npm/@turf/turf@6/turf.min.js"></script>
   <script src="https://api.mapbox.com/mapbox-gl-js/v2.15.0/mapbox-gl.js"></script>
@@ -266,8 +266,8 @@
     const el = document.createElement('div');
     el.className = 'custom-marker';
     el.style.backgroundImage = `url(${m.img})`;
-    el.style.width = '80px';
-    el.style.height = '80px';
+    el.style.width = '75px';
+    el.style.height = '75px';
 
     const popupHTML = `
       <div class="popup-content">
