--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
     .custom-marker {
       width: 100px;
       height: 100px;
+      background-size: cover;
+      border-radius: 50%;
+      border: 2px solid white;
     }
     .popup-content {
       font-size: 1em;
