--- a/index.html
+++ b/index.html
@@ -14,9 +14,12 @@
     .custom-marker {
       width: 100px;
       height: 100px;
-      background-size: cover;
-      border-radius: 50%;
-      border: 2px solid white;
+      background-size: contain;     /* 배경 꽉 채우기 대신 이미지 비율 유지 */
+      background-repeat: no-repeat;
+      background-position: center;
+      border: none;                 /* 테두리 제거 */
+      border-radius: 0;             /* 둥글게 하지 않음 */
+      pointer-events: auto;         /* 클릭 이벤트 허용 */
     }
     .popup-content {
       font-size: 1em;
