--- a/index.html
+++ b/index.html
@@ -53,6 +53,27 @@
 
   map.on('load', () => {
 
+    map.addSource('background_image', {
+      type: 'image',
+      url: 'background_map.png',
+      coordinates: [
+        [126.74773, 37.57312],   // top-left (좌상)
+        [126.92345, 37.57312],   // top-right (우상)
+        [126.92345, 37.56684],   // bottom-right (우하)
+        [126.74773, 37.56684]    // bottom-left (좌하)
+      ]
+    });
+    
+    map.addLayer({
+      id: 'background_layer',
+      type: 'raster',
+      source: 'background_image',
+      paint: { 'raster-opacity': 1 }
+    }, 'tile_layer_0'); // ← 기존 타일 레이어 앞에 삽입 (즉, 아래쪽에 깔림)
+
+
+
+
     map.addSource('tile_source_0', {
       type: 'image',
       url: 'tile_0_0.jpeg',
