--- a/index.html
+++ b/index.html
@@ -57,11 +57,11 @@
       type: 'image',
       url: 'background_map.png',
       coordinates: [
-        [126.74773, 37.57312],   // 좌상단
-        [126.92345, 37.57312],   // 우상단
-        [126.92345, 37.56684],   // 우하단
-        [126.74773, 37.56684]    // 좌하단
-      ]
+      [126.827, 37.57312],     // top-left
+      [126.844, 37.57312],     // top-right
+      [126.844, 37.56684],     // bottom-right
+      [126.827, 37.56684]      // bottom-left
+    ]
     });
 
     map.addLayer({
