--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html>
 <head>
@@ -14,12 +13,12 @@
     .custom-marker {
       width: 100px;
       height: 100px;
-      background-size: contain;     /* 배경 꽉 채우기 대신 이미지 비율 유지 */
+      background-size: contain;
       background-repeat: no-repeat;
       background-position: center;
-      border: none;                 /* 테두리 제거 */
-      border-radius: 0;             /* 둥글게 하지 않음 */
-      pointer-events: auto;         /* 클릭 이벤트 허용 */
+      border: none;
+      border-radius: 0;
+      pointer-events: auto;
     }
     .popup-content {
       font-size: 1em;
@@ -46,201 +45,54 @@
 
   const map = new mapboxgl.Map({
     container: 'map',
-    style: 'mapbox://styles/mapbox/light-v11',
+    style: {
+      version: 8,
+      sources: {},
+      layers: [
+        {
+          id: 'background',
+          type: 'background',
+          paint: { 'background-color': '#d3f4c0' } // 🎨 단색 배경
+        }
+      ]
+    },
     center: [126.8355, 37.5700],
     zoom: 15
   });
 
   map.on('load', () => {
+    const tiles = [
+      { id: 'tile_0_0', url: 'tile_0_0.jpeg', coords: [[126.83163, 37.57312], [126.83427, 37.57312], [126.83427, 37.57103], [126.83163, 37.57103]] },
+      { id: 'tile_0_1', url: 'tile_0_1.jpeg', coords: [[126.83427, 37.57312], [126.83691, 37.57312], [126.83691, 37.57103], [126.83427, 37.57103]] },
+      { id: 'tile_0_2', url: 'tile_0_2.jpeg', coords: [[126.83691, 37.57312], [126.83955, 37.57312], [126.83955, 37.57103], [126.83691, 37.57103]] },
+      { id: 'tile_1_0', url: 'tile_1_0.jpeg', coords: [[126.83163, 37.57103], [126.83427, 37.57103], [126.83427, 37.56893], [126.83163, 37.56893]] },
+      { id: 'tile_1_1', url: 'tile_1_1.jpeg', coords: [[126.83427, 37.57103], [126.83691, 37.57103], [126.83691, 37.56893], [126.83427, 37.56893]] },
+      { id: 'tile_1_2', url: 'tile_1_2.jpeg', coords: [[126.83691, 37.57103], [126.83955, 37.57103], [126.83955, 37.56893], [126.83691, 37.56893]] },
+      { id: 'tile_2_0', url: 'tile_2_0.jpeg', coords: [[126.83163, 37.56893], [126.83427, 37.56893], [126.83427, 37.56684], [126.83163, 37.56684]] },
+      { id: 'tile_2_1', url: 'tile_2_1.jpeg', coords: [[126.83427, 37.56893], [126.83691, 37.56893], [126.83691, 37.56684], [126.83427, 37.56684]] },
+      { id: 'tile_2_2', url: 'tile_2_2.jpeg', coords: [[126.83691, 37.56893], [126.83955, 37.56893], [126.83955, 37.56684], [126.83691, 37.56684]] }
+    ];
 
-    map.addSource('background_image', {
-      type: 'image',
-      url: 'background_map.png',
-      coordinates: [
-      [126.82767, 37.57626],  // 좌상단
-      [126.84351, 37.57626],  // 우상단
-      [126.84351, 37.56370],  // 우하단
-      [126.82767, 37.56370]   // 좌하단
-    ]
+    tiles.forEach(tile => {
+      map.addSource(tile.id, {
+        type: 'image',
+        url: tile.url,
+        coordinates: tile.coords
+      });
+      map.addLayer({
+        id: tile.id,
+        type: 'raster',
+        source: tile.id,
+        paint: { 'raster-opacity': 1 }
+      });
     });
-
-    map.addLayer({
-      id: 'background_layer',
-      type: 'raster',
-      source: 'background_image',
-      paint: { 'raster-opacity': 1 }
-    }, 'tile_layer_0');
-    
-
-    map.addSource('tile_source_0', {
-      type: 'image',
-      url: 'tile_0_0.jpeg',
-      coordinates: [
-        [126.83163, 37.57312],
-        [126.83427, 37.57312],
-        [126.83427, 37.57102666666667],
-        [126.83163, 37.57102666666667]
-      ]
-    });
-
-    map.addSource('tile_source_1', {
-      type: 'image',
-      url: 'tile_0_1.jpeg',
-      coordinates: [
-        [126.83427, 37.57312],
-        [126.83691, 37.57312],
-        [126.83691, 37.57102666666667],
-        [126.83427, 37.57102666666667]
-      ]
-    });
-
-    map.addSource('tile_source_2', {
-      type: 'image',
-      url: 'tile_0_2.jpeg',
-      coordinates: [
-        [126.83691, 37.57312],
-        [126.83955, 37.57312],
-        [126.83955, 37.57102666666667],
-        [126.83691, 37.57102666666667]
-      ]
-    });
-
-    map.addSource('tile_source_3', {
-      type: 'image',
-      url: 'tile_1_0.jpeg',
-      coordinates: [
-        [126.83163, 37.57102666666667],
-        [126.83427, 37.57102666666667],
-        [126.83427, 37.568933333333334],
-        [126.83163, 37.568933333333334]
-      ]
-    });
-
-    map.addSource('tile_source_4', {
-      type: 'image',
-      url: 'tile_1_1.jpeg',
-      coordinates: [
-        [126.83427, 37.57102666666667],
-        [126.83691, 37.57102666666667],
-        [126.83691, 37.568933333333334],
-        [126.83427, 37.568933333333334]
-      ]
-    });
-
-    map.addSource('tile_source_5', {
-      type: 'image',
-      url: 'tile_1_2.jpeg',
-      coordinates: [
-        [126.83691, 37.57102666666667],
-        [126.83955, 37.57102666666667],
-        [126.83955, 37.568933333333334],
-        [126.83691, 37.568933333333334]
-      ]
-    });
-
-    map.addSource('tile_source_6', {
-      type: 'image',
-      url: 'tile_2_0.jpeg',
-      coordinates: [
-        [126.83163, 37.568933333333334],
-        [126.83427, 37.568933333333334],
-        [126.83427, 37.56684],
-        [126.83163, 37.56684]
-      ]
-    });
-
-    map.addSource('tile_source_7', {
-      type: 'image',
-      url: 'tile_2_1.jpeg',
-      coordinates: [
-        [126.83427, 37.568933333333334],
-        [126.83691, 37.568933333333334],
-        [126.83691, 37.56684],
-        [126.83427, 37.56684]
-      ]
-    });
-
-    map.addSource('tile_source_8', {
-      type: 'image',
-      url: 'tile_2_2.jpeg',
-      coordinates: [
-        [126.83691, 37.568933333333334],
-        [126.83955, 37.568933333333334],
-        [126.83955, 37.56684],
-        [126.83691, 37.56684]
-      ]
-    });
-
-    map.addLayer({
-      id: 'tile_layer_0',
-      type: 'raster',
-      source: 'tile_source_0',
-      paint: { 'raster-opacity': 1 }
-    });
-
-    map.addLayer({
-      id: 'tile_layer_1',
-      type: 'raster',
-      source: 'tile_source_1',
-      paint: { 'raster-opacity': 1 }
-    });
-
-    map.addLayer({
-      id: 'tile_layer_2',
-      type: 'raster',
-      source: 'tile_source_2',
-      paint: { 'raster-opacity': 1 }
-    });
-
-    map.addLayer({
-      id: 'tile_layer_3',
-      type: 'raster',
-      source: 'tile_source_3',
-      paint: { 'raster-opacity': 1 }
-    });
-
-    map.addLayer({
-      id: 'tile_layer_4',
-      type: 'raster',
-      source: 'tile_source_4',
-      paint: { 'raster-opacity': 1 }
-    });
-
-    map.addLayer({
-      id: 'tile_layer_5',
-      type: 'raster',
-      source: 'tile_source_5',
-      paint: { 'raster-opacity': 1 }
-    });
-
-    map.addLayer({
-      id: 'tile_layer_6',
-      type: 'raster',
-      source: 'tile_source_6',
-      paint: { 'raster-opacity': 1 }
-    });
-
-    map.addLayer({
-      id: 'tile_layer_7',
-      type: 'raster',
-      source: 'tile_source_7',
-      paint: { 'raster-opacity': 1 }
-    });
-
-    map.addLayer({
-      id: 'tile_layer_8',
-      type: 'raster',
-      source: 'tile_source_8',
-      paint: { 'raster-opacity': 1 }
-    });
-
   });
 
   const markers = [
     { lng: 126.83621, lat: 37.57017, img: 'st1.png', title: '해봄정원', url: 'https://botanicpark.seoul.go.kr/front/main.do' },
-    { lng: 126.83499, lat: 37.57002, img: 'on1.png', title: '식물문화센터', url: '' },
-    { lng: 126.83443, lat: 37.57068, img: 'gold1.png', title: '거인의 정원', url: '' },
-    { lng: 126.83589, lat: 37.56965, img: 'ct1.png', title: '판매온실', url: '' }
+    { lng: 126.83499, lat: 37.57002, img: 'on1.png', title: '식물문화센터' },
+    { lng: 126.83443, lat: 37.57068, img: 'gold1.png', title: '거인의 정원' },
+    { lng: 126.83589, lat: 37.56965, img: 'ct1.png', title: '판매온실' }
   ];
 
   let currentPopup = null;
@@ -276,12 +128,6 @@
     el.style.backgroundImage = 'url(dung1.gif)';
     userMarker = new mapboxgl.Marker(el).setLngLat([longitude, latitude]).addTo(map);
     showPopupIfNearby(longitude, latitude);
-  }, err => {
-    alert("위치 정보를 가져올 수 없습니다.");
-  }, {
-    enableHighAccuracy: true,
-    maximumAge: 0,
-    timeout: 5000
   });
 
   markers.forEach(m => {
