--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         {
           id: 'background',
           type: 'background',
-          paint: { 'background-color': '#d3f4c0' } // 🎨 단색 배경
+          paint: { 'background-color': '#448e7a' } // 🎨 단색 배경
         }
       ]
     },
