--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <style>
     body, html { margin: 0; padding: 0; height: 100%; }
     #map { width: 100%; height: 100%; }
+
     .custom-marker {
       width: 100px;
       height: 100px;
@@ -20,17 +21,30 @@
       border-radius: 0;
       pointer-events: auto;
     }
+
+    .mapboxgl-popup-content {
+      background: transparent;
+      box-shadow: none;
+      padding: 0;
+    }
+
+    .mapboxgl-popup-close-button {
+      display: none;
+    }
+
     .popup-content {
       font-family: "Noto Sans KR", sans-serif;
       background: white;
       border-radius: 12px;
-      padding: 12px 16px;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.2);
+      padding: 10px 14px;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.15);
       color: #333;
       font-weight: 600;
       font-size: 1em;
+      text-align: center;
       cursor: pointer;
     }
+
     .popup-content:hover {
       background: #f2f2f2;
     }
